Fix z-index of progress bar behind overlay

--- a/libraries/scss/scrollio/scrollio.scss
+++ b/libraries/scss/scrollio/scrollio.scss
@@ -141,7 +141,7 @@ body {
             left: 0px;
             height: 3px;
             background-color: black;
-            z-index: 10;
+            z-index: 100;
         }
 
         //Only for keepActive = true
